# demo-python-api

./: .coveragerc  .env  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
api/: api.py  api_input.py  api_output.py  config.py  db_config.py  db_migrate.py  main.py  model.py  requirements.txt  startup.py
data/: cpt_codes.csv
deploy/: 01-postgres.yaml  02-api.yaml  Dockerfile.api
src/api/: api.py  config.py  db_migrate.py  main.py  model.py  routers.py
src/api/routers/: __init__.py  api_input.py  encounters.py  health.py  line_items.py  patients.py  routers.py
tests/: .env  conftest.py  requirements.txt  test_encounters.py  test_line_items.py  test_patients.py
