[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "demo-python-api"
version = "0.0.1"
description = "A demo Python API"
authors = [{name = "John Oberly III", email = "joberly@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "dynaconf==3.2.6",
    "fastapi==0.115.0",
    "peewee==3.17.6",
    "psycopg2-binary==2.9.9",
    "structlog==24.4.0",
    "uvicorn==0.31.0",
]

[tool.poetry]
name = "demo-python-api"
version = "0.0.1"
description = "A demo Python API"
authors = ["John Oberly III <joberly@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{include = "src/api"}]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "3.2.6"
fastapi = "0.115.0"
peewee = "3.17.6"
psycopg2-binary = "2.9.9"
structlog = "24.4.0"
uvicorn = "0.31.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

